frontend_v2/docs/handbook/technical-specs/acceptance-test-report.txt
YAML/JSON 整合系統驗收測試報告
測試時間: 2025-07-03T09:22:40.795Z
==================================================

測試摘要
==================================================
總測試數: 17
通過: 15
失敗: 2
成功率: 88.2%

詳細結果
==================================================

1. JSON 目錄存在: public/rubrics_data_json
   狀態: ✅ 通過

2. JSON 目錄存在: public/pbl_data_json
   狀態: ✅ 通過

3. JSON 檔案存在: ai_lit_domains.json
   狀態: ✅ 通過
   詳情: 大小: 225.7 KB

4. JSON 格式正確: ai_lit_domains.json
   狀態: ✅ 通過

5. JSON 檔案存在: ksa_codes.json
   狀態: ✅ 通過
   詳情: 大小: 191.7 KB

6. JSON 格式正確: ksa_codes.json
   狀態: ✅ 通過

7. JSON 檔案存在: ai_job_search_scenario.json
   狀態: ✅ 通過
   詳情: 大小: 30.3 KB

8. JSON 格式正確: ai_job_search_scenario.json
   狀態: ✅ 通過

9. YAML 轉 JSON 轉換
   狀態: ✅ 通過
   詳情: 轉換成功

10. YAML/JSON 內容一致性
   狀態: ✅ 通過
   詳情: YAML domains: 4, JSON domains: 4

11. API 讀取功能
   狀態: ✅ 通過
   詳情: API 回應正常

12. API 更新功能
   狀態: ✅ 通過
   詳情: API 回應正常

13. API 創建功能
   狀態: ✅ 通過
   詳情: API 回應正常

14. API 刪除功能
   狀態: ❌ 失敗
   詳情: 解析錯誤: Unexpected end of JSON input

15. JSON 到 YAML 同步
   狀態: ❌ 失敗
   詳情: Command failed: node scripts/yaml-json-crud-system.js update rubrics ai_lit_domains '{"test_sync_field":"test value"}' && node scripts/yaml-json-crud-system.js sync rubrics ai_lit_domains
<anonymous_script>:1
undefined
^

SyntaxError: "undefined" is not valid JSON
    at JSON.parse (<anonymous>)
    at YamlJsonCrudSystem.runCLI (/Users/young/project/ai-square/frontend/scripts/yaml-json-crud-system.js:260:33)
    at Object.<anonymous> (/Users/young/project/ai-square/frontend/scripts/yaml-json-crud-system.js:314:8)
    at Module._compile (node:internal/modules/cjs/loader:1529:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1613:10)
    at Module.load (node:internal/modules/cjs/loader:1275:32)
    at Module._load (node:internal/modules/cjs/loader:1096:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:164:12)
    at node:internal/main/run_main_module:28:49

Node.js v20.19.0


16. Relations API 正常運作
   狀態: ✅ 通過
   詳情: 載入 4 個 domains

17. 多語言功能正常
   狀態: ✅ 通過
   詳情: 中文資料載入成功

--------------------------------------------------
測試完成
